Frustum culling with AABB and new tessellation model for balls, which implicitly improves shadow quality

--- a/RasterTek/RasterTek.vcxproj
+++ b/RasterTek/RasterTek.vcxproj
@@ -189,6 +189,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Animatable.cpp" />
+    <ClCompile Include="AxisAlignedBoundingBox.cpp" />
     <ClCompile Include="Objects\ArmchairObject.cpp" />
     <ClCompile Include="BallSet.cpp" />
     <ClCompile Include="Camera.cpp" />
@@ -253,6 +254,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animatable.h" />
+    <ClInclude Include="AxisAlignedBoundingBox.h" />
     <ClInclude Include="Objects\ArmchairObject.h" />
     <ClInclude Include="AssimpMultiModel.h" />
     <ClInclude Include="BallSet.h" />
