--- a/DirectX/DirectX.vcxproj
+++ b/DirectX/DirectX.vcxproj
@@ -212,6 +212,7 @@
     <ClCompile Include="CBufferNotFoundException.cpp" />
     <ClCompile Include="ChairSet.cpp" />
     <ClCompile Include="CollisionManager.cpp" />
+    <ClCompile Include="Objects\CueObject.cpp" />
     <ClCompile Include="DirectionalLight.cpp" />
     <ClCompile Include="ImGui\imgui.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
@@ -281,6 +282,7 @@
     <ClInclude Include="CBufferNotFoundException.h" />
     <ClInclude Include="ChairSet.h" />
     <ClInclude Include="CollisionManager.h" />
+    <ClInclude Include="Objects\CueObject.h" />
     <ClInclude Include="DirectionalLight.h" />
     <ClInclude Include="ImGui\imconfig.h" />
     <ClInclude Include="ImGui\imgui.h" />
