--- a/DirectX/imgui.ini
+++ b/DirectX/imgui.ini
@@ -1,10 +1,45 @@
 [Window][Debug##Default]
-Pos=60,48
+Pos=60,60
 Size=400,400
 Collapsed=0
 
 [Window][ASD]
-Pos=31,86
-Size=32,542
+Pos=1000,300
+Size=100,120
+Collapsed=0
+
+[Window][KEK]
+Pos=1000,430
+Size=140,120
+Collapsed=0
+
+[Window][xx]
+Pos=100,200
+Size=500,120
+Collapsed=0
+
+[Window][Cue ball control]
+Pos=1000,300
+Size=100,120
+Collapsed=0
+
+[Window][Control]
+Pos=1000,430
+Size=120,120
+Collapsed=0
+
+[Window][Scoreboard]
+Pos=100,200
+Size=500,120
+Collapsed=0
+
+[Window][Cue ball]
+Pos=1000,300
+Size=100,120
+Collapsed=0
+
+[Window][Target]
+Pos=0,0
+Size=70,32
 Collapsed=0
 
