UI added to the game that supports resizing. Minimum size constraint added to the WndProc. In the UI mute sounds and change quality features are implemented.

--- a/DirectX/imgui.ini
+++ b/DirectX/imgui.ini
@@ -24,22 +24,27 @@ Size=100,120
 Collapsed=0
 
 [Window][Control]
-Pos=1000,430
+Pos=544,151
 Size=120,120
 Collapsed=0
 
 [Window][Scoreboard]
-Pos=100,200
+Pos=10,261
 Size=500,120
 Collapsed=0
 
 [Window][Cue ball]
-Pos=1000,300
-Size=100,120
+Pos=549,11
+Size=110,125
 Collapsed=0
 
 [Window][Target]
 Pos=0,0
 Size=70,32
+Collapsed=0
+
+[Window][Settings]
+Pos=514,291
+Size=160,80
 Collapsed=0
 
