Aim and Fine Aim are implemented with buggy Cue for the time being

--- a/DirectX/imgui.ini
+++ b/DirectX/imgui.ini
@@ -24,17 +24,17 @@ Size=100,120
 Collapsed=0
 
 [Window][Control]
-Pos=544,151
+Pos=1124,441
 Size=120,120
 Collapsed=0
 
 [Window][Scoreboard]
-Pos=10,261
+Pos=10,551
 Size=500,120
 Collapsed=0
 
 [Window][Cue ball]
-Pos=549,11
+Pos=1129,301
 Size=110,125
 Collapsed=0
 
@@ -44,7 +44,12 @@ Size=70,32
 Collapsed=0
 
 [Window][Settings]
-Pos=514,291
+Pos=1094,581
 Size=160,80
+Collapsed=0
+
+[Window][Move]
+Pos=30,491
+Size=120,40
 Collapsed=0
 
